@@ -1,3 +1,10 @@
+2014-01-08  Quentin Mathe <quentin.mathe@gmail.com>
+
+	* Source/NSValueTransformer (+valueTransformerForName:): Fixed to 
+	automatically register any available NSValueTransformer subclass that 
+	matches  the given name and is not yet registered. This behavior is 
+	described in the Cocoa API documentation.
+
 2014-01-08  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSUUID.m:
